# dell-unisphere-client

./: CHANGELOG.md  Makefile  README.md  inspect_response.py  pyproject.toml  pytest.ini  uniclient  unisphere
docs/: Architecture.md  Backend_RestAPI.md  TestStrategy.md  dell-unisphere-client.md  implementation_plan.md
src/dell_unisphere_client/: README.md  __init__.py  cli.py  client.py  models.py  version.py
src/dell_unisphere_client/api/: __init__.py  base.py  software.py  system.py  upgrade.py
src/dell_unisphere_client/exceptions/: __init__.py
src/dell_unisphere_client/session/: __init__.py
tests/: conftest.py  run_tests.py
tests/e2e/: test_e2e_client.py
tests/fixtures/: test_data.py
tests/integration/: test_cli_integration.py  test_client_integration.py
tests/scripts/: manual_upgrade_flow.py  test_upgrade_flow.py  test_upgrade_flow.sh
tests/scripts/test_results/: report.md  test_upgrade_flow_bash_report.md  test_upgrade_flow_client_report.md
tests/unit/: test_cli.py  test_client.py  test_client.py.bak  test_json_responses.py  test_session_management.py  test_version.py
